# wiertlo

./: CMakeLists.txt  LICENSE  README.md
disabled_examples/: container_facade_example.cpp  tag_allocator_example.cpp
examples/: arithmetic_if_example.cpp  baretype_example.cpp  case_of_example.cpp  comp_from_key_example.cpp  construct_example.cpp  defs_example.cpp  deleter_from_function_example.cpp  enum_example.cpp  interval_example.cpp  lambda_visitor_example.cpp  make_example.cpp  map_ops.cpp  meta_example.cpp  noisy_example.cpp  nonown_ptr_example.cpp  not_fn_example.cpp  numeric_example.cpp  one_based_array_example.cpp  one_based_array_view_example.cpp  overflow_example.cpp  overload_set_example.cpp  pimpl_handle_example.cpp  pimpl_handle_example.hpp  pretty_print_example.cpp  shared_member_example.cpp  shitty_range_example.cpp  store_ref_example.cpp  string_example.cpp  string_interface_example.cpp  strong_typedef_example.cpp  tagged_pointer_example.cpp  tagged_ptr_example.cpp  tuple_example.cpp  unique_cast_example.cpp  unique_handle_example.cpp  value_ptr_example.cpp  value_ptr_example.h  value_ptr_example.hpp  void_example.cpp
include/wiertlo/: almost_flat_containers.hpp  arithmetic_if.h  arithmetic_if.hpp  baretype.hpp  case_of.hpp  comp_from_key.hpp  construct.hpp  container_facade.hpp  defs.h  defs.hpp  deleter_from_function.hpp  demangled.hpp  enum.hpp  enum_enable.hpp  interval.hpp  lambda_visitor.hpp  make.hpp  map_ops.hpp  meta.hpp  noisy.hpp  nonown_ptr.hpp  not_fn.hpp  numeric.hpp  one_based_array.hpp  one_based_array_view.hpp  overflow.hpp  range.hpp  (+16 more)
(+11 files in other folders)
